<resources>
    <string name="app_name">dog</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="strBtn1">버튼입니다.</string>
    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="hint_pass">비밀번호를 입력하세요.</string>
    <string name="hint_nickname">닉네임을 입력하세요.</string>
    <string name="maptext">지도</string>
    <string name="communitytext">커뮤니티</string>
    <string name="optiontext">환경설정</string>
    <string name="starttext">시작</string>
    <string name="walkStart">산책 출발</string>
    <string name="title_et">제목을 입력하세요.</string>
    <string name="qwer">워크독 게시판</string>
    <string name="cummunity">커뮤니티</string>
    <string name="mylocation">내위치</string>
    <string name="callloc">경로가져오기</string>
    <string name="login_title">계속하려면 로그인해주세요.</string>
</resources>