<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Maps">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin">

        <androidx.fragment.app.FragmentContainerView android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cameraTilt="0"
            app:uiRotateGestures="true"
            app:uiZoomControls="true"
            tools:context=".MapsActivity"/>

        <Button android:id="@+id/location"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_color"
            android:textColor="#000000"
            android:text="@string/mylocation"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:text="@string/callloc"
            android:backgroundTint="@color/theme_color"/>

        <Button android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/theme_color"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/walkStart"/>
    </FrameLayout>

    <LinearLayout android:id="@+id/lin"
        android:background="@color/theme_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button android:id="@+id/mapmenu"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/maptext"/>

        <Button android:id="@+id/cummunity"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cummunity"/>
        <Button android:id="@+id/option"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#000000"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/optiontext"/>

    </LinearLayout>
</RelativeLayout>